Fixed broken CSS on modal calendar view

--- a/app/partials/production-ftd/production-ftd.less
+++ b/app/partials/production-ftd/production-ftd.less
@@ -101,9 +101,11 @@
 	}
 }
 
-td:first-child {
-	width: 100px;
-	padding-left: 25px !important;
+#rightScroll {
+	td:first-child {
+		width: 100px;
+		padding-left: 25px !important;
+	}
 }
 
 .mask-img.invalid {
